--- a/product.html
+++ b/product.html
@@ -118,11 +118,11 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/Product/product_appendix_31.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_30.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_30.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_38.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_38.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_40.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_40.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_43.png" style="max-width:100%;" /></a>
 <br>
@@ -222,11 +222,11 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/Product/product_appendix_90.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_91.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_91.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_92.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_92.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_93.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_93.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_94.png" style="max-width:100%;" /></a>
 <br>
@@ -300,7 +300,7 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/Product/product_appendix_129.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_130.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_130.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_131.png" style="max-width:100%;" /></a>
 <br>
