--- a/technology.html
+++ b/technology.html
@@ -46,33 +46,55 @@ padding-left: 55px;
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/Technology/technology_appendix_15.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_01.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_5.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_02.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_11.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_03.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_4.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_04.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_9.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_05.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_6.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_06.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_8.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_07.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_13.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_08.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_1.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_09.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Technology/technology_appendix_10.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_12.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_11.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_3.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_12.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_14.jpg" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_13a.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Technology/technology_appendix_7.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_13b.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_14.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_15.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_16.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_17.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_18.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_19.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_20.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_21.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_22.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_23.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Technology/technology_appendix_24.png" style="max-width:100%;" /></a>
 <br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
 
