--- a/advertising.html
+++ b/advertising.html
@@ -79,4 +79,14 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/Photo/photo_appendix_12.jpg" style="max-width:100%;" /></a>
 <br>
+<img src="./Appendix_Links/Photo/photo_appendix_20.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Photo/photo_appendix_21.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Photo/photo_appendix_22.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Photo/photo_appendix_23.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Photo/photo_appendix_24.png" style="max-width:100%;" /></a>
+<br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
