--- a/the_bunker.html
+++ b/the_bunker.html
@@ -69,4 +69,28 @@ padding-left: 55px;
 <br>
 <img src="./Appendix_Links/the_bunker/the_bunker_appendix_3.jpg" style="max-width:100%;" /></a>
 <br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_23.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_24.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_25.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_26.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_27.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_28.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_29.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_30.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_31.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_32.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_33.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_34.png" style="max-width:100%;" /></a>
+<br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
