--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -11,6 +11,8 @@ Future Genesis Digital Flat File
     <script src="./collapse-list.js"></script>
 
 <style>
+
+	
 a:link {
   color: #000000;
   background-color: transparent;
@@ -49,6 +51,13 @@ img {
         padding: 40px;
 	flex-direction: column;
     }
+	
+	
+	@media screen and (max-width: 767px) {   
+    #main-img{
+        content: url(http://subtlepatterns.com/patterns/dark_embroidery.png) !important;
+    } 
+}
 	
 </style>  
 
