--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -55,15 +55,66 @@ img {
 	#title_message {
     display: none;
 }
+div{
+  width: 100%;
+  height:100%;
+  padding: 0;
+  margin:0;
+  left:0;
+  left:0;
+}
 
-@media screen and (min-width: 768px) {
-    #title_message {
-        clear: both;
-        display: block;
-        float: left;
-        margin: 10px auto 5px 20px;
-        width: 28%;
-    }
+ #desktopView{
+   background:rgb(50,50,80);
+   display:block;
+  }
+  #mobileView{
+    background:rgb(50,80,50);
+    display:none;
+  }
+  #mobileLandscapeView{
+    display:none;
+    background:rgb(80,50,50);
+  }
+
+
+/* iPhone 6 in portrait & landscape */ 
+@media only screen and (min-device-width : 375px) and (max-device-width : 667px){ 
+
+  /* where you can hide unwanted DIV and show a special MOBILE DIV if desired */ 
+
+  #desktopView{
+    background:rgb(50,50,80);
+    display:none;
+  }
+  #mobileView{
+    background:rgb(50,80,50);
+    display:block;  
+  }
+  #mobileLandscapeView{
+    background:rgb(80,50,50);
+    display:none;
+  }
+
+}
+
+/* iPhone 6 in landscape */ 
+@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : landscape) { 
+
+   /* where you can hide unwanted DIV and show a special MOBILE DIV if desired */ 
+
+  #desktopView{
+    display:none;
+  }
+  #mobileView{
+    display:none;  
+  }
+  #mobileLandscapeView{
+    display:block;
+  }
+
+}
+
 	
 </style>  
 
