--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -114,7 +114,7 @@ div{
 </head>
   <body>
 <body style="background-color:#FFFFFF">	
-    <div class="flex-container">
+    <div id="desktopView" class="flex-container">
         <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
         <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
