--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -120,6 +120,8 @@ div{
         <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
     </div>
 
+	 <div id="mobileView" class="flex-container">
+        <div><img src="./Links/home_page_index/mobile_header_image.png"></div>
 <hr>
 
     <!-- (B) NESTED LIST -->
