--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -65,16 +65,16 @@ div{
 }
 
  #desktopView{
-   background:rgb(50,50,80);
-   display:block;
+   background:#FFFFFF;
+   display:flex;
   }
   #mobileView{
-    background:rgb(50,80,50);
-    display:none;
+    background:#FFFFFF;
+    display:flex;
   }
   #mobileLandscapeView{
-    display:none;
-    background:rgb(80,50,50);
+    display:flex;
+    background:#FFFFFF;
   }
 
 
@@ -85,8 +85,8 @@ div{
     display:none;
   }
   #mobileView{
-    background:rgb(50,80,50);
-    display:block;  
+    background:
+    display:flex;  
   }
   #mobileLandscapeView{
     background:rgb(80,50,50);
