--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -67,10 +67,14 @@ div{
  #desktopView{
    background:#FFFFFF;
    display:flex;
+   flex-direction: column;
+	
   }
   #mobileView{
     background:#FFFFFF;
     display:flex;
+    flex-direction: column;
+
   }
   #mobileLandscapeView{
     display:flex;
