--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -82,7 +82,7 @@ img {
   }
   #mobileView{
     background:
-    display:flex;  
+    display:none;  
   }
   #mobileLandscapeView{
     background:rgb(80,50,50);
