--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -38,28 +38,12 @@ img {
 	height: auto;
 	} 
 
- .flex-container {
-        display: flex;
-        background-color: #FFFFFF;
-	justify-content: space-between; 
-	
-    }
-     
-.flex-container div {
-        background-color: #FFFFFF;
-        margin: 10px;
-        padding: 0px;
-	flex-direction: column;
-    }
-	
-	#title_message {
-    display: none;
-}
-
  #desktopView{
    background:#FFFFFF;
    display:flex;
    flex-direction: column;
+   justify-content: space-between; 
+
 	
   }
   #mobileView{
@@ -110,13 +94,13 @@ img {
 </head>
   <body>
 <body style="background-color:#FFFFFF">	
-    <div id="desktopView" class="flex-container">
+    <div id="desktopView">
         <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
         <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
     </div>
 
-	 <div id="mobileView" class="flex-container">
+	 <div id="mobileView">
         <div><img src="./Links/home_page_index/mobile_header_image.png"></div>
 <hr>
 
