--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -94,14 +94,14 @@ img {
 </head>
   <body>
 <body style="background-color:#FFFFFF">	
-    <div id="desktopView">
-        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
-        <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
-        <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
-    </div>
+   
+         <div id="desktopView"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
+        <div id="desktopView"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
+         <div id="desktopView"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
+	    <hr>
 
-	 <div id="mobileView">
-        <div><img src="./Links/home_page_index/mobile_header_image.png"></div>
+	
+         <div id="mobileView"><img src="./Links/home_page_index/mobile_header_image.png"></div>
 <hr>
 
     <!-- (B) NESTED LIST -->
