--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -65,8 +65,9 @@ img {
     display:none;
   }
   #mobileView{
-    background:
-    display:none;  
+   background:#FFFFFF;
+    display:flex;
+    flex-direction: column;
   }
   #mobileLandscapeView{
     background:rgb(80,50,50);
