--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -49,7 +49,7 @@ img {
 	background-color: #FFFFFF; 
 	margin: 10px; 
 	padding: 0px; 
-	flex-direction: column; 
+	flex-direction: row; 
 }
 
 	
@@ -61,7 +61,7 @@ img {
 
   }
   #mobileLandscapeView{
-    display:flex;
+    display:none;
     background:#FFFFFF;
   }
 
@@ -104,11 +104,12 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
 
-	<div class=".flex-container">
+	<div class="flex-container">
          <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
          <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
 	    <hr>
+	</div>
 
 	
          <div id="mobileView"><img src="./Links/home_page_index/mobile_header_image.png"></div>
