--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -105,15 +105,15 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
 
-	<div class="flex-container">
-         <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
+	<div class="flex-container div">
+        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
-         <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
+        <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
 	    <hr>
 	</div>
 
 	
-         <div id="mobileView"><img src="./Links/home_page_index/mobile_header_image.png"></div>
+         <div id="mobileView"><img src="./Links/home_page_index/mobile_header_image.png"></a></div>
 
     <!-- (B) NESTED LIST -->
     <ul class="collapse">
