--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -49,7 +49,7 @@ img {
 
 	.flex-item {
 		background-color: #FFFFFF; 
-		margin: 10px; 
+		margin: 0px; 
 	        padding: 0px; 
 	}
 
@@ -104,12 +104,12 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
 
-	<div class="flex-container">
-        <div class="flex-item"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
-        <div class="flex-item"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
-        <div class="flex-item"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
-	    <hr>
-	</div>
+	<ul class="flex-container">
+        <li class="flex-item"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></a></li>
+        <li class="flex-item"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></li>
+        <li class="flex-item"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></a></li>
+	</ul>
+	<hr>
 
 	
          <div id="mobileView"><img src="./Links/home_page_index/mobile_header_image.png"></a></div>
