--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -104,11 +104,11 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
 
-	<ul class="flex-container">
-        <li class="flex-item"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></a></li>
-        <li class="flex-item"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></li>
-        <li class="flex-item"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></a></li>
-	</ul>
+	<div class="flex-container">
+        <div class="flex-item"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></a></div>
+        <div class="flex-item"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
+        <div class="flex-item"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></a></div>
+	</div>
 	<hr>
 
 	
