--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -43,8 +43,8 @@ img {
 .flex-container {
 	display: flex; 
 	background-color: #FFFFFF;
-	flex-direction: column;
-	justify-content: space-between;
+	flex-direction: row;
+	justify-content: center;
 }
 
 	.flex-item {
