--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -104,10 +104,10 @@ img {
   <body>
 <body style="background-color:#FFFFFF">	
 
-	<div class="flex-container">
-        <div class="flex-item"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></a></div>
-        <div class="flex-item"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
-        <div class="flex-item"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></a></div>
+	<div id="flex-container">
+        <div id="flex-item"><img src="./Links/home_page_index/Homepage-FG-Logo.png"></a></div>
+        <div id="flex-item"><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
+        <div id="flex-item"><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></a></div>
 	</div>
 	<hr>
 
