--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -43,7 +43,7 @@ img {
 .flex-container {
 	display: flex; 
 	background-color: #FFFFFF;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: center;
 }
 
