--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -34,7 +34,6 @@ a:active {
   text-decoration: underline;
 }
 img {
-	max-width: 480px;
 	height: auto;
 	} 
 	 
@@ -105,9 +104,9 @@ img {
 <body style="background-color:#FFFFFF">	
 <div id="desktopView">	
     <div class="flex-container">
-        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png"></div>
+        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png" width="180px"></a></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
-        <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" style="padding-top:10px"></div>
+        <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" width="180px" style="padding-top:10px"></a></div>
     </div>
 </div>
 	
