--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -33,7 +33,9 @@ a:active {
   background-color: transparent;
   text-decoration: underline;
 }
-img {
+	
+.header {
+	max-width: 180px;
 	height: auto;
 	} 
 	 
@@ -104,9 +106,9 @@ img {
 <body style="background-color:#FFFFFF">	
 <div id="desktopView">	
     <div class="flex-container">
-        <div><img src="./Links/home_page_index/Homepage-FG-Logo.png" width="180px"></a></div>
+        <div><img class="header"; src="./Links/home_page_index/Homepage-FG-Logo.png" width="180px"></a></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
-        <div><img src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" width="180px" style="padding-top:10px"></a></div>
+        <div><img class="header"; src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" width="180px" style="padding-top:10px"></a></div>
     </div>
 </div>
 	
