--- a/max.html
+++ b/max.html
@@ -31,6 +31,7 @@ a:active {
 
   img {
 padding-left: 55px;
+padding-bottom: 10px; 
 
 }
   .backBtn {
@@ -46,7 +47,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:600px">
-<img src="./Links/Leaders/oak_maxfearlight_1.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Links/Leaders/oak_maxfearlight_1.jpg" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Links/Leaders/oak_maxfearlight_2.jpg" style="max-width:100%;" /></a>
 <br>
