--- a/lexicon.html
+++ b/lexicon.html
@@ -31,6 +31,7 @@ a:active {
 
 img {
 padding-left: 55px;
+padding-bottom: 10px; 
 
 }
 
@@ -48,7 +49,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px" />
-<img src="./Links/Lexicon/lexicon_oak_1.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Links/Lexicon/lexicon_oak_1.png" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_2.jpg" style="max-width:100%" /></a>
 <br>
