--- a/rituals.html
+++ b/rituals.html
@@ -31,7 +31,7 @@ a:active {
   
 img {
 padding-left: 55px;
-
+padding-bottom: 10px; 
 }
   .backBtn {
   background-color: white; 
@@ -46,7 +46,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:600px">
-<img src="./Links/Rituals/rituals_oak_1.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Links/Rituals/rituals_oak_1.jpg" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Links/Rituals/rituals_oak_2.jpg" style="max-width:100%" /></a>
 <br>
