--- a/non_believers.html
+++ b/non_believers.html
@@ -31,6 +31,7 @@ a:active {
 
 img {
 padding-left: 55px;
+padding-bottomo: 10px; 
 
 }
   .backBtn {
@@ -46,7 +47,7 @@ padding-left: 55px;
 
 <body style="background-color:#FFFFFF">
 <div style="max-width:600px" />
-<img src="./Links/non_believers/non_believers_1.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Links/non_believers/non_believers_1.png" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Links/non_believers/non_believers_2.jpg" style="max-width:100%" /></a>
 <br>
