--- a/technology.html
+++ b/technology.html
@@ -31,6 +31,7 @@ a:active {
 
 img {
 padding-left: 55px;
+padding-bottom: 10px; 
   }
   .backBtn {
   background-color: white; 
@@ -46,7 +47,7 @@ padding-left: 55px;
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/Technology/technology_appendix_01.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Appendix_Links/Technology/technology_appendix_01.png" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Appendix_Links/Technology/technology_appendix_02.png" style="max-width:100%;" /></a>
 <br>
