--- a/product.html
+++ b/product.html
@@ -31,6 +31,7 @@ a:active {
 
 img {
 padding-left: 55px;
+padding-bottom: 10px; 
 
 }
  .backBtn {
@@ -46,7 +47,7 @@ padding-left: 55px;
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/Product/product_appendix_33.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_33.png" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_32.png" style="max-width:100%;" /></a>
 <br>
