--- a/the_bunker.html
+++ b/the_bunker.html
@@ -30,6 +30,7 @@ a:active {
 }
   img {
 padding-left: 55px;
+padding-bottom: 10px; 
 
 }
   .backBtn {
@@ -45,7 +46,7 @@ padding-left: 55px;
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/the_bunker/the_bunker_appendix_2.jpg" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Appendix_Links/the_bunker/the_bunker_appendix_2.jpg" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Appendix_Links/the_bunker/the_bunker_appendix_9.png" style="max-width:100%;" /></a>
 <br>
