--- a/origin_story.html
+++ b/origin_story.html
@@ -40,6 +40,12 @@ padding-bottom: 10px;
   left: 90%;
   top: 90%;
 }
+@media only screen and (max-device-width: 736px) {
+img {
+padding-top: 0px !important;
+padding-bottom: 10px !important;
+padding-left: 0px !important;
+}
 
 </style>
 </head>
