--- a/origin_story.html
+++ b/origin_story.html
@@ -44,7 +44,8 @@ padding-bottom: 10px;
 img {
 padding-top: 0px !important;
 padding-bottom: 10px !important;
-padding-left: 0px !important;
+padding-left: 10px !important;
+padding-right: 10px !important; 
 }
 
 </style>
