--- a/rituals.html
+++ b/rituals.html
@@ -40,6 +40,14 @@ padding-bottom: 10px;
   left: 90%;
   top: 90%;
 }
+
+@media only screen and (max-device-width: 736px) {
+img {
+padding-top: 0px !important;
+padding-bottom: 10px !important;
+padding-left: 10px !important;
+padding-right: 10px !important; 
+}
 </style>
 
 </head>
