--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -106,7 +106,7 @@ a:active {
 <body style="background-color:#FFFFFF">	
 <div id="desktopView">	
     <div class="flex-container">
-        <div><img class="header"; src="./Links/home_page_index/Homepage-FG-Logo.png" width="180px" padding-left:"50px"></a></div>
+        <div><img class="header"; src="./Links/home_page_index/Homepage-FG-Logo.png" width="180px"; padding-left: "55px";></a></div>
         <div><p style="font-family:Courier;">STRICTLY CONFIDENTIAL -- DO NOT SHARE OR FORWARD</p></div>
         <div><img class="header"; src="./Links/home_page_index/Index-Page-Digital-Flat-File.png" width="180px" style="padding-top:10px"></a></div>
     </div>
