--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -95,9 +95,11 @@ a:active {
   #mobileLandscapeView{
     display:block;
   }
-hr {
-display: none; 
+    .no-mobile {
+        display: none;
+    }
 }
+
 
 	
 </style>  
@@ -114,7 +116,7 @@ display: none;
 </div>
 	
          <div id="mobileView"><img src="./Links/home_page_index/mobile_header.png"></a></div>
-<hr>
+<hr class="no-mobile">
     <!-- (B) NESTED LIST -->
     <ul class="collapse">
 	<li>
