--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -83,6 +83,8 @@ a:active {
     display:none;
   }
 
+{ hr { visibility: none; }
+
 }
 
 @media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : landscape) { 
@@ -95,10 +97,7 @@ a:active {
   #mobileLandscapeView{
     display:block;
   }
-    .no-mobile {
-        display: none;
-    }
-}
+ 
 
 
 	
