--- a/table_of_contents.html
+++ b/table_of_contents.html
@@ -83,9 +83,9 @@ a:active {
     display:none;
   }
 
-{ hr { visibility: none; }
-
-}
+  hr {
+    display:none;
+  }
 
 @media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : landscape) { 
   #desktopView{
