--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,13 @@ img{
     padding: none; 
     border: 1px solid #FFFFFF; 
 }
-    
+
+    @media only screen and (min-device-width : 375px) and (max-device-width : 667px){ 
+
+    img{
+    width:100%; 
+    max-width:350px; 
+    }
 </style>
 </head>
 <body>
