--- a/product.html
+++ b/product.html
@@ -56,35 +56,18 @@ padding-right: 10px !important;
 <body style="background-color:#FFFFFF">
 <div style="max-width:480px">
 <p style = "font-family:courier,serif;font-size:16px;font-style:regular;">
-<img src="./Appendix_Links/Product/product_appendix_33.png" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_32.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_39.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_04.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_01.png" style="max-width:100%;" /></a>
+
+<img src="./Appendix_Links/Product/product_appendix_01.png" style="max-width:100%; padding:55px 0px 10px 55px;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_02.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_20.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_21.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_04.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_05.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_29.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_06.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_07.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_34.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_35.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_36.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_08.png" style="max-width:100%;" /></a>
 <br>
@@ -100,10 +83,6 @@ padding-right: 10px !important;
 <br>
 <img src="./Appendix_Links/Product/product_appendix_14.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_19.png" style="max-width:100%;" /></a>
-<br>
-<img src="./Appendix_Links/Product/product_appendix_37.png" style="max-width:100%;" /></a>
-<br>
 <img src="./Appendix_Links/Product/product_appendix_15.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_16.png" style="max-width:100%;" /></a>
@@ -111,6 +90,12 @@ padding-right: 10px !important;
 <img src="./Appendix_Links/Product/product_appendix_17.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_18.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_19.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_20.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_21.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_22.png" style="max-width:100%;" /></a>
 <br>
@@ -122,23 +107,39 @@ padding-right: 10px !important;
 <br>
 <img src="./Appendix_Links/Product/product_appendix_26.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_28.png" style="max-width:100%;" /></a>
-<br>
 <img src="./Appendix_Links/Product/product_appendix_27.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_31.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_28.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_29.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_30.png" style="max-width:100%;" /></a>
 <br>
+<img src="./Appendix_Links/Product/product_appendix_31.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_32.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_33.png" style="max-width:100%; /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_34.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_35.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_36.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_37.png" style="max-width:100%;" /></a>
+<br>
 <img src="./Appendix_Links/Product/product_appendix_38.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_40.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_39.png" style="max-width:100%;" /></a>
 <br>
-<img src="./Appendix_Links/Product/product_appendix_43.png" style="max-width:100%;" /></a>
+<img src="./Appendix_Links/Product/product_appendix_40.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_41.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_42.png" style="max-width:100%;" /></a>
+<br>
+<img src="./Appendix_Links/Product/product_appendix_43.png" style="max-width:100%;" /></a>
 <br>
 <img src="./Appendix_Links/Product/product_appendix_44.png" style="max-width:100%;" /></a>
 <br>
