--- a/lexicon.html
+++ b/lexicon.html
@@ -84,9 +84,19 @@ padding-right: 10px !important;
 <br>
 <img src="./Links/Lexicon/lexicon_oak_14.jpg" style="max-width:100%" /></a>
 <br>
+<img src="./Links/Lexicon/lexicon_oak_15.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Lexicon/lexicon_oak_16.png" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Lexicon/lexicon_oak_17.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Lexicon/lexicon_oak_18.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Lexicon/lexicon_oak_19.png" style="max-width:100%" /></a>
+<br>
 <img src="./Links/Lexicon/lexicon_oak_20.jpg" style="max-width:100%" /></a>
 <br>
-<img src="./Links/Lexicon/lexicon_oak_21.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_21.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_22.jpg" style="max-width:100%" /></a>
 <br>
@@ -94,7 +104,7 @@ padding-right: 10px !important;
 <br>
 <img src="./Links/Lexicon/lexicon_oak_24.png" style="max-width:100%" /></a>
 <br>
-<img src="./Links/Lexicon/lexicon_oak_25.png" style="max-width:100%; padding:55px 0px 0px 55px;" /></a>
+<img src="./Links/Lexicon/lexicon_oak_25.png" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_26.png" style="max-width:100%" /></a>
 <br>
