--- a/lexicon.html
+++ b/lexicon.html
@@ -86,7 +86,7 @@ padding-right: 10px !important;
 <br>
 <img src="./Links/Lexicon/lexicon_oak_15.jpg" style="max-width:100%" /></a>
 <br>
-<img src="./Links/Lexicon/lexicon_oak_16.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_16.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_17.jpg" style="max-width:100%" /></a>
 <br>
