--- a/lexicon.html
+++ b/lexicon.html
@@ -92,7 +92,7 @@ padding-right: 10px !important;
 <br>
 <img src="./Links/Lexicon/lexicon_oak_18.jpg" style="max-width:100%" /></a>
 <br>
-<img src="./Links/Lexicon/lexicon_oak_19.png" style="max-width:100%" /></a>
+<img src="./Links/Lexicon/lexicon_oak_19.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Lexicon/lexicon_oak_20.jpg" style="max-width:100%" /></a>
 <br>
