--- a/temples.html
+++ b/temples.html
@@ -59,6 +59,10 @@ padding-right: 10px !important;
 <br>
 <img src="./Links/Temples/temples_oak_2.jpg" style="max-width:100%" /></a>
 <br>
+<img src="./Links/Temples/temples_oak_3.jpg" style="max-width:100%" /></a>
+<br>
+<img src="./Links/Temples/temples_oak_4.png" style="max-width:100%" /></a>
+<br>
 <img src="./Links/Temples/temples_oak_5.jpg" style="max-width:100%" /></a>
 <br>
 <img src="./Links/Temples/temples_oak_6.png" style="max-width:100%" /></a>
