--- a/1992.html
+++ b/1992.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="icon" type="image/x-icon" href="Links/home_page_index/Oakley_Logo.ico">
 <!-- (A) LOAD CSS & JS -->
     <link rel="stylesheet" href="./collapse-list.css">
