--- a/1992.html
+++ b/1992.html
@@ -40,6 +40,10 @@ a:active {
   left: 80%;
   top: 90%;
 }
+@media only screen and (max-device-width: 736px) {
+div {
+padding:0px;
+}
 
 </style>
 </head>
