--- a/1992.html
+++ b/1992.html
@@ -40,9 +40,21 @@ a:active {
   left: 80%;
   top: 90%;
 }
-@media only screen and (max-device-width: 736px) {
-div style{
-padding:0px;
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+
+.video-container iframe {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 </style>
@@ -50,11 +62,15 @@ padding:0px;
 
 <body style="background-color:#FFFFFF">
     <div style="padding:55px;">
+        <div>
     <iframe width="600" height="338" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 <br>
 <br>
 <br>
+        <div>
     <iframe width="600" height="338" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
 <br>
 <br>
 <br>
