--- a/1992.html
+++ b/1992.html
@@ -61,18 +61,16 @@ a:active {
 </head>
 
 <body style="background-color:#FFFFFF">
-    <div style="padding:55px;">
-        <div>
+        <div class="video-container">
     <iframe width="600" height="338" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 <br>
 <br>
 <br>
-        <div>
+        <div class="video-container">
     <iframe width="600" height="338" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 <br>
 <br>
 <br>
-    </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
