--- a/1992.html
+++ b/1992.html
@@ -62,7 +62,7 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class="video-container">
-    <iframe class="video-container iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class=width="600" height="338" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
 <br>
 <br>
